src/index.css
@import "tailwindcss";
@import "tailwindcss/utilities";
.page-container {
    position: relative;
    width: 100%;
    height: 100vh;
    overflow: hidden;
  }
  
  @keyframes elasticMove {
    0% {
      transform: translateX(0px) translateY(0px);
    }
    50% {
      transform: translateX(120px) translateY(40px);
    }
    100% {
      transform: translateX(0px) translateY(0px);
    }
  }
  
  @keyframes elasticMoveRight {
    0% {
      top: 10%;
      transform: scale(1);
    }
    50% {
      top: 45%;
      transform: scale(1.2);
    }
    100% {
      top: 10%;
      transform: scale(1);
    }
  }
  
  .elastic-one {
    position: absolute;
    width: 400px;
    height: 250px; 
    background: rgba(159, 125, 224, 0.3); 
    border-radius: 50%;
    filter: blur(60px);
    animation: elasticMove 4s infinite ease-in-out alternate;
    left: 10%;
    top: 20%;
  }
  
  .elastic-two {
    position: absolute;
    width: 750px; 
    height: 420px; 
    background: rgba(126, 74, 224, 0.3);
    border-radius: 50%;
    filter: blur(60px);
    animation: elasticMoveRight 6s infinite ease-in-out alternate;
    right: 5%;
  }
  
  ::-webkit-scrollbar {
    width: 8px;
  }
  
  ::-webkit-scrollbar-track {
    background: #98989b;
    border-radius: 10px;
  }
  
  ::-webkit-scrollbar-thumb {
    background: #fbbf24; 
    border-radius: 10px;
    transition: background 0.3s ease-in-out;
  }
  
  ::-webkit-scrollbar-thumb:hover {
    background: #d97706;
  }
    
  html, body {
    overflow-x: hidden;
    width: 100%;
  }
  

